# Synapse

./: .gitignore  LICENSE  README.md
Synapse/: README.md  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
Synapse/src/: main.ts  styles.css
Synapse/src-tauri/: Cargo.toml  tauri.conf.json
Synapse/src-tauri/src/: commands.rs  lib.rs  main.rs
Synapse/src-tauri/src/commands/: mod.rs  settings.rs  window.rs
Synapse/src-tauri/src/services/: mod.rs
Synapse/src-tauri/src/services/ai/: mod.rs
Synapse/src-tauri/src/services/chat/: mod.rs
Synapse/src-tauri/src/settings/: error.rs  mod.rs  types.rs
Synapse/src-tauri/src/utils/: error.rs  mod.rs
Synapse/src/components/settings/: settings.ts
Synapse/src/pages/: settings.css  settings.html
Synapse/src/types/: settings.ts
