[package]
name = "synapse"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synapse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
    "global-shortcut-all",
    "window-create",
    "window-hide",
    "window-show",
    "window-start-dragging",
    "window-unminimize",
    "window-minimize",
    "window-close",
    "window-maximize",
    "window-unmaximize",
    "window-set-decorations",
    "window-set-always-on-top",
    "window-set-size",
    "window-set-position"
] }
window-shadows = "0.2"
