[package]
name = "synapse"
version = "0.1.0"
description = "A modern application launcher and command palette"
authors = ["erbun"]
license = "MIT"
repository = "https://github.com/erbun/synapse"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synapse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "synapse"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tauri
tauri = { version = "1.5", features = [
    # Window Management
    "window-create",
    "window-hide",
    "window-show",
    "window-start-dragging",
    "window-unminimize",
    "window-minimize",
    "window-close",
    "window-maximize",
    "window-unmaximize",
    "window-set-decorations",
    "window-set-always-on-top",
    "window-set-size",
    "window-set-position",
    
    # System Integration
    "global-shortcut-all",
    "macos-private-api"] }

# UI Enhancement
window-shadows = "0.2"

# Settings System
tokio = { version = "1.36", features = ["full", "sync"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
keyring = "2.0"
tempfile = { version = "3.8", optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Added Dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
dev-tools = ["tempfile"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
